--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -884,10 +884,10 @@
                             </div>
                             <div id="What"  class="page-section">
                                     <h4 class="purple"><span class="numbers"></span> What’s New</h4>
-                                  <p><span class="numbers">1.</span>	Firefox and Microsoft Edge support for Web Automations</p>
-                                  <p><span class="numbers">2.</span>	Light weight installation distribution</p>
+                                  <p><span class="numbers">1.</span> Firefox and Microsoft Edge support for Web Automations</p>
+                                  <p><span class="numbers">2.</span> Light weight installation distribution</p>
                                   <p><span class="numbers">3.</span> Debug mode</p>
-                                  <p><span class="numbers">4.</span>	Pluggable architecture</p>
+                                  <p><span class="numbers">4.</span> Pluggable architecture</p>
                                   <p><span class="numbers">5.</span> Improved performance</p>
                                   <p><span class="numbers">6.</span> Registration option from eWorker to eManager console (Reverse registration feature)</p>
                                   <p><span class="numbers">7.</span> Live log feature in eManager console to monitor Action Flows</p>
@@ -966,7 +966,7 @@
                              <p style="text-align:center;"><strong>Figure: Installation Instruction-3</strong></p>
                              <li><span class="numbers">6.</span>After selecting the folder, click on “INSTALL” which will start installing RPA studio.</li>
                              <img src="{{ '/assets/images/doc-img4.png' | relative_url }}" alt="image" style="width:600px;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
-                              <p style="text-align:center;"><strong>Figure: Installation Instruction-4</strong></p>
+                             <p style="text-align:center;"><strong>Figure: Installation Instruction-4</strong></p>
 
                              <li><span class="numbers">7.</span>The installation will take a bit time, and after installing the Studio, click on CLOSE button to proceed for further process</li>
                              <img src="{{ '/assets/images/doc-img5.png' | relative_url }}" alt="image" style="width:600px;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
@@ -1001,12 +1001,10 @@
                             <img src="{{ '/assets/images/doc-img11.png' | relative_url }}" alt="image" style="width:600px;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure:  Installing TechForce.ai OCR-6 </strong></p>
                             </ol>
-
-
                          </div>
 
                          <div id="Un-installInstructions"  class="page-section">
-                             <h4 class="red"><span class="numbers"></span>  Uninstall Instructions</h4>
+                           <h4 class="red"><span class="numbers"></span>  Uninstall Instructions</h4>
                            <p>To uninstall the TechForce.ai studio, go to the Control Panel and click on Uninstall a program.</p>
                            <img src="{{ '/assets/images/doc-img12.png' | relative_url }}" alt="image" style="width:600px;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
                             <p style="text-align:center;"><strong>Figure:  Uninstall Instructions-1 </strong></p>
@@ -2392,7 +2390,6 @@
                             <p>1.The worker category is the type of eWorker machine that is going to be registered. Currently, only the “Reserved” type can be created.</p>
                             <h5>Reserved:</h5>
                             <p>2.If a eWorker machine is created as “Reserved” then the flows can be executed only on that machine.</p>
-
                             <h5>Worker creation:</h5>
                             <p>1.This is the eWorker machine screen before a worker is created in Worker management.</p>
                              <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
@@ -2405,7 +2402,7 @@
                             <img src="{{ '/assets/images/doc-img83.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                             <p style="text-align:center;"><strong>Figure: eWorker machine detals </strong></p>
                              <h5>Delete Worker</h5>
-                            <p><span class="numbers">1.</span>1.To delete an eWorker machine created earlier, just click on the DELETE icon which is available in the details of the machine.</p>
+                            <p><span class="numbers">1.</span>To delete an eWorker machine created earlier, just click on the DELETE icon which is available in the details of the machine.</p>
                             <img src="{{ '/assets/images/doc-img84.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                              <p style="text-align:center;"><strong>Figure: Worker screen </strong></p>
                             <p><span class="numbers">2.</span>On the next screen, click on YES to confirm the deletion of the worker on the machine.</p>
@@ -2573,7 +2570,7 @@
 
                          <div id="Instructions"  class="page-section">
                              <h4 class="purple"><span class="numbers"></span> Installation Instructions</h4>
-                             <p>Refer 3.1.3</p>
+                             <p onclick='scroll("InstallationInstructions");'>Refer Installation Instructions from Studio Guide</p>
                          </div>
 
                          <div id="InstallingTechForceOCR2"  class="page-section">
