--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2570,7 +2570,7 @@
 
                          <div id="Instructions"  class="page-section">
                              <h4 class="purple"><span class="numbers"></span> Installation Instructions</h4>
-                             <p onclick='scroll("InstallationInstructions");'>Refer Installation Instructions from Studio Guide</p>
+                             <a onclick='scroll("InstallationInstructions");'>Refer Installation Instructions from Studio Guide</a>
                          </div>
 
                          <div id="InstallingTechForceOCR2"  class="page-section">
