--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2575,35 +2575,17 @@
 
                          <div id="InstallingTechForceOCR2"  class="page-section">
                              <h4 class="purple"><span class="numbers"></span> Installing TechForce.ai OCR</h4>
-                             <p>Refer 3.1.4</p>
+                             <a href="javascript: scrollToForm();">Refer Installing TechForce.ai OCR from Studio Guide</a>
                          </div>
 
                          <div id="Uninstall"  class="page-section">
                              <h4 class="purple"><span class="numbers"></span> Un-install Instructions</h4>
-                             <p>Refer 3.1.5</p>
+                             <a href="javascript: scrollToForm();">Refer Un-install Instructions from Studio Guide</a>
                          </div>
 
                          <div id="Registeringworker"  class="page-section">
                              <h4 class="purple"><span class="numbers"></span> Registering worker with EM console</h4>
-
-                             <h5>Worker creation:</h5>
-                             <p>1.This is the worker screen before a worker is created in Worker management.</p>
-                              <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                              <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
-                             <p><span class="numbers">2.</span>To create a worker, open the TechForce.ai studio, which will create an icon in the task tray. Open the task tray, Right-click on the studio icon. Click on settings and register. The following screen displays.</p>
-                             <img src="{{ '/assets/images/doc-img82.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
-                               <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
-                             <p><span class="numbers">3.</span>Enter the details and click on SUBMIT. A message confirming successful submission will appear. This creates the worker.  After creating the worker the details of the worker like name, host and so on can be seen and the worker RDP details will be sent via an email.</p>
-                             <p><span class="numbers">4.</span>The  following image shows the screen of the worker created, also the details of the created worker can be seen</p>
-                             <img src="{{ '/assets/images/doc-img83.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                             <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
-                              <h5>Delete Worker</h5>
-                             <p><span class="numbers">1.</span>To delete a worker created earlier, just click on the DELETE icon which is available in the details of the worker.</p>
-                             <img src="{{ '/assets/images/doc-img84.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                              <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
-                             <p><span class="numbers">2.</span>On the next screen, click on YES to confirm the deletion of the worker on the machine.</p>
-                             <img src="{{ '/assets/images/doc-img85.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                              <p style="text-align:center;"><strong>Figure: Worker RDP details </strong></p>
+                          <a href="javascript: scrollToForm();">Refer Worker creation from WorkerManagement</a>
                           </div>
 
                          <div id="TriggeringBots"  class="page-section">
@@ -3033,6 +3015,22 @@ $("#databaseactions-ul").stop().slideToggle(700);
 <script>
 function scrollToForm() {
   document.querySelector('#InstallationInstructions').scrollIntoView({behavior: 'smooth'});
+}
+
+function scrollToForm() {
+  document.querySelector('#InstallationInstructions').scrollIntoView({behavior: 'smooth'});
+}
+
+function scrollToForm() {
+  document.querySelector('#InstallingTechForceOCR').scrollIntoView({behavior: 'smooth'});
+}
+
+function scrollToForm() {
+  document.querySelector('#Un-installInstructions').scrollIntoView({behavior: 'smooth'});
+}
+
+function scrollToForm() {
+  document.querySelector('#WorkerManagement').scrollIntoView({behavior: 'smooth'});
 }
 </script>
 </body>
