--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3017,21 +3017,21 @@ function scrollToForm() {
   document.querySelector('#InstallationInstructions').scrollIntoView({behavior: 'smooth'});
 }
 
-function scrollToForm() {
-  document.querySelector('#InstallationInstructions').scrollIntoView({behavior: 'smooth'});
-}
-
-function scrollToForm() {
-  document.querySelector('#InstallingTechForceOCR').scrollIntoView({behavior: 'smooth'});
-}
-
-function scrollToForm() {
-  document.querySelector('#Un-installInstructions').scrollIntoView({behavior: 'smooth'});
-}
-
-function scrollToForm() {
-  document.querySelector('#WorkerManagement').scrollIntoView({behavior: 'smooth'});
-}
+// function scrollToForm() {
+//   document.querySelector('#InstallationInstructions').scrollIntoView({behavior: 'smooth'});
+// }
+//
+// function scrollToForm() {
+//   document.querySelector('#InstallingTechForceOCR').scrollIntoView({behavior: 'smooth'});
+// }
+//
+// function scrollToForm() {
+//   document.querySelector('#UninstallInstructions').scrollIntoView({behavior: 'smooth'});
+// }
+//
+// function scrollToForm() {
+//   document.querySelector('#WorkerManagement').scrollIntoView({behavior: 'smooth'});
+// }
 </script>
 </body>
 </html>
