--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2575,17 +2575,17 @@
 
                          <div id="InstallingTechForceOCR2"  class="page-section">
                              <h4 class="purple"><span class="numbers"></span> Installing TechForce.ai OCR</h4>
-                             <a href="javascript: scrollToForm();">Refer Installing TechForce.ai OCR from Studio Guide</a>
+                             <a href="javascript: scrollToForm2();">Refer Installing TechForce.ai OCR from Studio Guide</a>
                          </div>
 
                          <div id="Uninstall"  class="page-section">
                              <h4 class="purple"><span class="numbers"></span> Un-install Instructions</h4>
-                             <a href="javascript: scrollToForm();">Refer Un-install Instructions from Studio Guide</a>
+                             <a href="javascript: scrollToForm3();">Refer Un-install Instructions from Studio Guide</a>
                          </div>
 
                          <div id="Registeringworker"  class="page-section">
                              <h4 class="purple"><span class="numbers"></span> Registering worker with EM console</h4>
-                          <a href="javascript: scrollToForm();">Refer Worker creation from WorkerManagement</a>
+                          <a href="javascript: scrollToForm4();">Refer Worker creation from WorkerManagement</a>
                           </div>
 
                          <div id="TriggeringBots"  class="page-section">
@@ -3017,21 +3017,17 @@ function scrollToForm() {
   document.querySelector('#InstallationInstructions').scrollIntoView({behavior: 'smooth'});
 }
 
-// function scrollToForm() {
-//   document.querySelector('#InstallationInstructions').scrollIntoView({behavior: 'smooth'});
-// }
-//
-// function scrollToForm() {
-//   document.querySelector('#InstallingTechForceOCR').scrollIntoView({behavior: 'smooth'});
-// }
-//
-// function scrollToForm() {
-//   document.querySelector('#UninstallInstructions').scrollIntoView({behavior: 'smooth'});
-// }
-//
-// function scrollToForm() {
-//   document.querySelector('#WorkerManagement').scrollIntoView({behavior: 'smooth'});
-// }
+function scrollToForm2() {
+  document.querySelector('#InstallingTechForceOCR').scrollIntoView({behavior: 'smooth'});
+}
+
+function scrollToForm3() {
+  document.querySelector('#UninstallInstructions').scrollIntoView({behavior: 'smooth'});
+}
+
+function scrollToForm4() {
+  document.querySelector('#WorkerManagement').scrollIntoView({behavior: 'smooth'});
+}
 </script>
 </body>
 </html>
