--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3022,7 +3022,7 @@ function scrollToForm2() {
 }
 
 function scrollToForm3() {
-  document.querySelector('#UninstallInstructions').scrollIntoView({behavior: 'smooth'});
+  document.querySelector('#Un-installInstructions').scrollIntoView({behavior: 'smooth'});
 }
 
 function scrollToForm4() {
