--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2371,10 +2371,10 @@
                              <p style="text-align:center;"><strong>Figure:  Process execution </strong></p>
                              <p>3. Select the Execution target Type (like Reserved). If the RESERVED option is selected as the execution type, then specify the eWorker machine.</p>
                              <img src="{{ '/assets/images/doc-img60.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
-                              <p style="text-align:center;"><strong>Figure: select eworker machine</strong></p>
+                             <p style="text-align:center;"><strong>Figure: select eworker machine</strong></p>
                              <img src="{{ '/assets/images/doc-img61.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
-                               <p style="text-align:center;"><strong>Figure: select execution type </strong></p>
-                             <p>Note: Remove the note text.</p>
+                             <p style="text-align:center;"><strong>Figure: select execution type </strong></p>
+
                           </div>
 
                           <div id="WorkerManagement"  class="page-section">
@@ -2390,19 +2390,19 @@
                             <p>1.The worker category is the type of eWorker machine that is going to be registered. Currently, only the “Reserved” type can be created.</p>
                             <h5>Reserved:</h5>
                             <p>2.If a eWorker machine is created as “Reserved” then the flows can be executed only on that machine.</p>
-                            <h5>Worker creation:</h5>
-                            <p>1.This is the eWorker machine screen before a worker is created in Worker management.</p>
+                            <h5>Creating a eWorker machine:</h5>
+                            <p>1.This is the eWorker Machine screen before the action flows execution environment is created.</p>
                              <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                              <p style="text-align:center;"><strong>Figure: Worker screen </strong></p>
                             <p><span class="numbers">2.</span> To create a worker, open the TechForce.ai studio, which will create an icon in the task tray. Open the task tray, Right-click on the studio icon. Click on settings and register. The following screen displays.</p>
                             <img src="{{ '/assets/images/doc-img82.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                              <p style="text-align:center;"><strong>Figure: Register your eWorker machine </strong></p>
+                            <p style="text-align:center;"><strong>Figure: Register your eWorker machine </strong></p>
                             <p><span class="numbers">3.</span>Enter the details and click on SUBMIT. A message confirming successful submission will appear. This creates the worker. After creating the worker the details of the eWorker machine like name, host and so on can be seen.</p>
                             <p><span class="numbers">4.</span>The following image shows the screen of the eWorker  created, also the details of the created eWorker machine can be seen.</p>
                             <img src="{{ '/assets/images/doc-img83.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                             <p style="text-align:center;"><strong>Figure: eWorker machine detals </strong></p>
-                             <h5>Delete Worker</h5>
-                            <p><span class="numbers">1.</span>To delete an eWorker machine created earlier, just click on the DELETE icon which is available in the details of the machine.</p>
+                             <h5>Delete eWorker Machine</h5>
+                            <p><span class="numbers">1.</span>To delete an eWorker machine created, just click on the DELETE icon which is available in the details of the machine.</p>
                             <img src="{{ '/assets/images/doc-img84.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                              <p style="text-align:center;"><strong>Figure: Worker screen </strong></p>
                             <p><span class="numbers">2.</span>On the next screen, click on YES to confirm the deletion of the worker on the machine.</p>
@@ -2462,8 +2462,8 @@
                           <p> Choose the “Action Flow" that you want to Schedule.</p>
                           <h5><span class="numbers">3.</span>Reserved</h5>
                           <p>Select the eWorker machine in which the execution should be done.</p>
-                          <h5><span class="numbers">4.</span>Workers</h5>
-                          <p>Select the worker in which the execution should be done</p>
+                          <h5><span class="numbers">4.</span>eWorkers Machine</h5>
+                          <p>Select the eWorker Machine in which the execution should be done.</p>
                           <h5><span class="numbers">5.</span>Execution Type</h5>
                           <p>Select the execution type either to execute in Chrome or headless mode.</p>
                           <h5><span class="numbers">6.</span>Timezone</h5>
@@ -2584,8 +2584,8 @@
                          </div>
 
                          <div id="Registeringworker"  class="page-section">
-                             <h4 class="purple"><span class="numbers"></span> Registering worker with EM console</h4>
-                          <a href="javascript: scrollToForm4();">Refer Worker creation from WorkerManagement</a>
+                             <h4 class="purple"><span class="numbers"></span> Registering eworker machine with EM console</h4>
+                          <a href="javascript: scrollToForm4();">Refer eworker machine creation from WorkerManagement</a>
                           </div>
 
                          <div id="TriggeringBots"  class="page-section">
