--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -867,6 +867,7 @@
                             <p>Build a flow to open a webpage, click on an element, scroll the page down, take the snapshot of a page, print the text of an HTML element in the logs, capture the column data from a web table into a variable and print it in logs, and go back to the previous page.</p>
                             <h5>Build a flow using Excel actions:</h5>
                             <p>Build a flow to filter data from an Excel sheet based on two different column values and save the data into a variable. Write the filtered data into a new sheet in the same workbook. Again, filter the data based on two different column values and save it into another variable. Append the data to the same new sheet. Then, get the complete data from the Excel sheet and write it into another Excel sheet. Delete a range of data from the newly created Excel sheet.</p>
+                            <a href="assets/files/Excel.dox" download>Excel actions</a>
                             <h5>Build a flow using files and folders:</h5>
                             <p>Build a flow to get today’s date and retrieve the Excel files downloaded with today’s date from a folder. Compare the file names with specified data, rename the file and copy it to the required folder. Then delete the downloaded files.</p>
                             </div>
@@ -2347,7 +2348,7 @@
                                <p style="text-align:center;"><strong>Figure: Business Process tab </strong></p>
                                <p>4. eWorker machine tab lists the machines registered with the eManager console. It contains the required runtime to execute the action flows that are published to eManager console.</p>
                                <img src="{{ '/assets/images/doc-img50.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                                    <p style="text-align:center;"><strong>Figure: Workers tab </strong></p>
+                               <p style="text-align:center;"><strong>Figure: Workers tab </strong></p>
                                <p>5. Queues shows the current and pending tasks waiting for the execution in the eWorker machine.</p>
                                <img src="{{ '/assets/images/doc-img51.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                  <p style="text-align:center;"><strong>Figure:  Queues</strong></p>
