--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -940,7 +940,7 @@
                              </ol>
                              <h5>Download TechForce.ai RPA Studio:</h5>
                              <p>1. To download the studio, the user must register with eManager Console.</p>
-                             <p>2. To get access to the eManager Console, go to<a href="https://emcaws.techforce.ai/try/signup?subscriptionId=0">https://emcaws.techforce.ai/try/signup?subscriptionId=0</a>and submit the details.</p>
+                             <p>2. To get access to the eManager Console, go to<a href="https://emcaws.techforce.ai/try/signup?subscriptionId=0">https://emcaws.techforce.ai/try/signup?subscriptionId=0 target="_blank"</a> and submit the details.</p>
                              <img src="{{ '/assets/images/doc-img112.png' | relative_url }}" alt="image" style="width:400px;text-align:center;border:1px solid green;margin-left:20%;margin-top:10px;margin-bottom:10px;">
                              <p>3. Upon successful registration, you will be redirected to the login page.</p>
                              <img src="{{ '/assets/images/doc-img113.png' | relative_url }}" alt="image" style="width:400px;text-align:center;border:1px solid green;margin-left:20%;margin-top:10px;margin-bottom:10px;">
@@ -2323,7 +2323,7 @@
                             <div id="Registerwith"  class="page-section">
                               <h4 class="skyBlue"> Register with eManager console</h4>
 
-                              <p><span class="numbers">1.</span> To Register into eManager-Console, go to<a href="https://www.techforce.ai.ai"> https://www.techforce.ai.ai </a>choose your plan.</p>
+                              <p><span class="numbers">1.</span> To Register into eManager-Console, go to<a href="https://www.techforce.ai.ai"> https://www.techforce.ai.ai target="_blank"</a>choose your plan.</p>
                               <img src="{{ '/assets/images/doc-img44.png' | relative_url }}"alt="image" style=" border: 1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: Choose your Plan </strong></p>
                               <p><span class="numbers">2. </span>Fill your details and submit.</p>
