--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -564,6 +564,9 @@
                                           <li><a class="child 1" href="#Patches"> Patches & Updates</a></li>
                                           <li><a class="child 1" href="#What"> What's New</a></li>
                                       </ul>
+                                      <li class="subMenu">
+                                          <a href="#TechforceRPA" class="heading"><span class="numbers"></span>Techforce.ai RPA</a>
+                                      </li>
                                   </li>
                                  <li class="subMenu">
                                       <a href="#TechForce"  class="heading"><span class="numbers"></span>TechForce.ai Studio Guide</a>
@@ -898,6 +901,32 @@
                                   <p><span class="numbers">8.</span> Database actions in Studio to support MySQL and PostgreSQL databases</p>
                                   <p><span class="numbers">9.</span> Publish option in Studio to publish Action Flows to eManager console</p>
                             </div>
+
+                            <div id="TechforceRPA"  class="page-section">
+                              <h3>Techforce.ai RPA</h3>
+                              <p>Techforce.ai Robotic Process Automation (Techforce.ai RPA) is a software component or tool which automates mundane repetitive business processes. It helps business users to streamline enterprise operations and reduce costs. Also Techforce.ai RPA enables developers to focus on most important value-added tasks by automating repetitive clerical tasks.</p>
+                              <h5>Benefits of Techforce.ai RPA:</h5>
+                              <li>Low cost and easy to implement</li>
+                              <li>Increased Customer satisfaction </li>
+                              <li>Reduces human errors and thus reduces staffing costs</li>
+                              <li>Helps to comply with standards and regulations</li>
+
+                              <h5>Thechforce.ai RPA components:</h5>
+                              <p><strong>Thechforce.ai RPA Studio:</strong>Techforce.ai RPA studio is an integrated development environment that helps business users and developers to create automation<strong> Action Flows </strong> by drag and drop <strong>actions</strong> from the <strong>action library</strong>. An Action is a piece of software program that performs a pre-defined task.  Action Library consists of many such actions. An Action Flow consists of a series of actions configured in a stage to automate a specific process.  It only requires very minimal coding skills to create and configure Action Flows.</p>
+                              <p>Techforce.ai RPA studio is packaged with a rich set of actions that allows you to seamlessly work with desktops, browsers, Microsoft applications such as Excel and outlook, databases, secure FTP servers, PDFs and many more. It also has inbuilt support for JavaScript, Python and AutoHotKey languages which allows you to write your own piece of code if you do not find any action that fulfils your requirement.</p>
+                              <p>Techforce.ai RPA studio also has a recording feature which records all web related actions, lets you modify the recorded action flow and replay it.</p>
+                              <p>You can simply play the Action Flow from studio to check how it executes.</p>
+
+                              <h5>Techforce.ai eManager Console:</h5>
+                              <p>Techforce.ai eManager console is a centralized administration console that enables you to publish, execute, schedule, monitor and manage action flows for your organization. It is a central application that can manage and execute action flows on on-premise and cloud <strong>eWorker Machines</strong>. An eWorker Machine is a physical or virtual machine which consists of Techforce.ai RPA runtime to execute Action Flows. You can register an eWorker Machine with eManager Console by using the Techforce.ai icon under system tray menu.</p>
+                              <p>Techforce.ai eManager Console is responsible for queuing the requests, executing the action flows as per the sequence, logging audit trial, sending notifications and real time reporting. It also supports version control of the Action Flows, user & role management, profile management, billing management and personal data management.</p>
+
+                              <h5>Techforce.ai Runtime:</h5>
+                              <p>Techforce.ai Runtime is the actual engine which parses the actions in Action Flow to software instructions and executes these instructions as per the properties configured in the action. It receives commands from either eManager Console or Studio and completes the execution as per the instructions.</p>
+                              <img src="{{ '/assets/images/doc-img117.png' | relative_url }}" alt="image" style="text-align:center;border:1px solid green;margin-top:10px;margin-bottom:10px;">
+
+                            </div>
+
 
                          <div id="TechForce"  class="page-section">
                              <h3>TechForce.ai Studio Guide</h3>
