--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -923,7 +923,7 @@
 
                               <h5>Techforce.ai Runtime:</h5>
                               <p>Techforce.ai Runtime is the actual engine which parses the actions in Action Flow to software instructions and executes these instructions as per the properties configured in the action. It receives commands from either eManager Console or Studio and completes the execution as per the instructions.</p>
-                              <img src="{{ '/assets/images/doc-img117.png' | relative_url }}" alt="image" style="text-align:center;border:1px solid green;margin-top:10px;margin-bottom:10px;">
+                              <img src="{{ '/assets/images/doc-img117.jpg' | relative_url }}" alt="image" style="text-align:center;border:1px solid green;margin-top:10px;margin-bottom:10px;">
 
                             </div>
 
