--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -644,14 +644,15 @@
                                                         </ul></li>
 
                                                     <li id="MouseActions" style="margin-left:20px;"><a id="mouseactions-expand" class="child 2" href="#Mouse">Mouse Actions</span></a>
-                                                    <ul id="#mouseactions-ul">
+                                                    <ul id="mouseactions-ul">
 
                                                     <li style="margin-left:20px;"><a class="child 2" href="#Click"><span class="numbers"></span> <span style="margin-left:35px;">Click</span></a></li>
                                                     <li style="margin-left:20px;"><a class="child 2" href="#RightClick"><span class="numbers"></span> <span style="margin-left:35px;">Right Click</span></a></li>
                                                     <li style="margin-left:20px;"><a class="child 2" href="#DoubleClick"><span class="numbers"></span> <span style="margin-left:35px;">Double Click</span></a></li>
                                                     <li style="margin-left:20px;"><a class="child 2" href="#Hover"><span class="numbers"></span> <span style="margin-left:35px;">Hover</span></a></li>
                                                     <li style="margin-left:20px;"><a class="child 2" href="#Select"><span class="numbers"></span><span style="margin-left:35px;">Select</span></a></li>
-                                                    </ul></li>
+                                                    </ul>
+                                                    </li>
 
                                                     <li id="ConditionalActions" style="margin-left:20px;"><a id="conditionalactions-expand" class="child 2" href="#ConditionalActions">Conditional Actions</a>
                                                     <ul id="conditionalactions-ul">
@@ -924,7 +925,6 @@
                               <h5>Techforce.ai Runtime:</h5>
                               <p>Techforce.ai Runtime is the actual engine which parses the actions in Action Flow to software instructions and executes these instructions as per the properties configured in the action. It receives commands from either eManager Console or Studio and completes the execution as per the instructions.</p>
                               <img src="{{ '/assets/images/doc-img117.jpg' | relative_url }}" alt="image" style="text-align:center;border:1px solid green;margin-top:10px;margin-bottom:10px;">
-
                             </div>
 
 
